Bug 320783 - Bring back the background mode
Summary: Bring back the background mode
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-05 21:33 UTC by Ganton
Modified: 2017-07-10 19:53 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.13#
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ganton 2013-06-05 21:33:55 UTC
I will restrain me from writing about what I think of subtracting software capabilities that people use,  furthermore without any minimal survey or study of its use.

So in http://lists.kde.org/?l=kde-commits&m=136172706100642 we can see that the background mode feature has been removed, and in http://lists.kde.org/?l=konsole-devel&m=135316608321148&w=2 we can see a "justification" like 'All in all, I feel that option is more like a trick or demonstration of   "we can also do what yakuake does. well, kind of"'.

Perhaps someone hasn't realised that Konsole has more features than Yakuake, we just have to look at the features available from the menu, to start with.

The background mode feature isn't perfect, of course that it can be improved... but having Konsole, and its advanced capabilities, available with a global key is much better than switching to Yakuake and losing features.

The background mode feature can be brought back now instead of waiting for the new release for people to complain when they realise that they push the keys and Konsole doesn't appear.

Thanks.

Reproducible: Always
Comment 1 Ganton 2013-06-11 03:51:29 UTC
Previously, a real Konsole survey was done. It was answered by more than 8000 people and the background mode was developed because of this.

Robert Knight, a former main developer of Konsole, wrote in http://kdemonkey.blogspot.com.es/2007/04/easter-holiday-terminal-update.html:
[...]
> Implemented a Yakuake-style 'background mode' for Konsole. This means that a shell session 
> is started in the background, which can be displayed or hidden instantly from anywhere by 
> pressing a global shortcut [...]

> Thanks also to everyone, all 8000+ of you, who took the time to complete the Konsole survey. 
> Your feedback is much appreciated. I have summarised about 2/3rds of the results ( available 
> here [^1] ) so far, and already this week I implemented a number of changes based on the 
> results ( Background mode, SSH bookmarks ). There were many kind words for the developers 
> ( past and present ), always appreciated :) 
    
> [^1]: https://github.com/robertknight/konsole/blob/master/developer-doc/research/konsole-survey-findings
Comment 2 Rodrigo Rosenfeld Rosas 2013-07-09 16:24:02 UTC
+1. I just discovered this feature in konsole and got in love with it. It just works perfect for me the way it currently works and I have nothing to complain about it...

I've been frustrated since yesterday after trying to use kdocker, ksystraycmd and alltray to hide my konsole window with some tabs serving my applications (Rails, Grails, Guard, etc).

I found this feature today after running konsole --help. And then I just found it will be removed.

Please don't!
Comment 3 Antonis Kanouras 2013-07-20 11:14:20 UTC
TL;DR: The feature works fine as is; rant follows.

Please don't remove this awesome feature. Yakuake is cute, but can't be
compared to Konsole proper and its featureset.

Consider my use case:

I usually have just one maximised Konsole window, which I like to be able to
restore and move around at will.
I'm also using (read: can't live without) keyboard shortcuts to launch any of
10+ different sessions.

The last period I remember myself using multiple terminal windows on a daily
basis was before tabbed terminal emulators made their appearance.
The only time I'm using multiple windows nowadays is when I have multiple
monitors connected, and, even in that case, it is useful that only one window
is affected by the background mode.
I should also note that Yakuake doesn't support multiple windows either.

At least with the Kate/KWrite thing, one is a proper subset of the other.
Comment 4 Rodrigo Rosenfeld Rosas 2013-07-21 13:46:45 UTC
Antonis, I'm curious. What do you mean by having a shortcut for each session? Are you able to toggle each application visibility with a separate key stroke? I'm asking because I'd love to have this feature but couldn't find any software that would allow me to do that. If so, how can you achieve that?
Comment 5 Antonis Kanouras 2013-07-22 11:12:41 UTC
I'm sorry, s/session/Konsole profile/g on my post!

As for your question, you can already (unreliably in the case of multi-window applications) set a shortcut for each window when using Kwin. This however doesn't hide the window. One way of achieving that could probably be by writing a Kwin script (which would also workaround the removal of Konsole's background-mode, ugh).
Comment 6 Ganton 2013-07-28 08:26:54 UTC
 Antonis Kanouras  wrote:

> TL;DR: 

If the bug description is too long, it can be summarized asking to ourselves: What is faster, 

    a) to press several times alt+tab to go seeing windows until you arrive to the konsole one? (and if you finally realize that there is no konsole window there, then stop the Alt+tab cycling and launch a new konsole).

or 

    b) to press a hotkey?

And that time is multiplied by a lot of times, every day. 

The more someone uses Konsole, the more he can benefit of the *already existing* background mode, please, don't kill it.
Comment 7 phanisvara das 2013-08-16 12:22:20 UTC
apart from the fact that konsole is better than yakuake, it also plays much better with awesome WM, which i'm using these days with KDE applications. i really don't see any rational reason to remove that functionality.
Comment 8 victormg 2013-09-03 11:44:20 UTC
*** This bug has been confirmed by popular vote. ***
Comment 9 Martin Sandsmark 2013-09-03 23:18:37 UTC
Kurt, is there anything I could fix in background mode so that it could be brought back?
Comment 10 Ganton 2013-09-04 08:03:53 UTC
> Kurt, is there anything I could fix in background mode so that it could be brought back?
I'm not Kurt :-), but while he answers, I looked at
https://projects.kde.org/projects/kde/applications/konsole/repository/revisions/35bb9cf9e79465d252580615f50b4ce8d34e3d34
and there I saw the main changes that removed the capabilities of the background mode, maybe some of those changes can be canceled, and that would be a start.

Note: I'm not a Konsole developer :-), I just wrote that just in case that it could be useful for someone, while Kurt answered a better response.
Comment 11 Rodrigo Rosenfeld Rosas 2013-09-04 13:52:17 UTC
I believe I understand why the feature has been removed... What if we changed the way it works? Instead of allowing a single background-mode window, we could ask for the global shortcut for a window to turn the current window a background-mode one. If an the requested global shortcut is already assigned to another Konsole window the action will fail. If the global shortcut is already used by another application, a warning shows up asking for confirmation to override the global shortcut. Once the global shortcut is set, it will work only for that current window (detached tabs after setting the shortcut won't be affected by it). That way we could have as many background windows as available global shortcuts we want to use.

Would that work?
Comment 12 Kurt Hindenburg 2014-01-29 15:07:37 UTC
So if I understand this, you want 1 konsole window to have a shortcut to show/hide it.

I'd rather not bring back the command-line option, so we'd need a way to select the konsole window you wanted the shortcut to work with.
Comment 13 phanisvara das 2014-01-29 15:15:14 UTC
> ...so we'd need a way to select the konsole window you wanted the shortcut to work with.

menu option in konsole? if another one is already designated 'background mode,' then ask it this should be overridden and the new one take it's place.
Comment 14 Ganton 2014-01-29 21:39:05 UTC
(In reply to comment #12)
> So if I understand this, you want 1 konsole window to have a shortcut to
> show/hide it.
Thank you. The "background mode" of Konsole also hides the Konsole icon in the taskbar when Konsole is not visible (and possibly achieves other objectives). It's the way of working of Yakuake, Kuake, Guake, Tilda, the "terminal emulator" present in Quake and other games, etc. That way of working is so useful that [Konsole users asked it to Robert Knight](https://bugs.kde.org/show_bug.cgi?id=320783#c1).

Once you get used to it, is saves a lot of time, it's similar to having another monitor only to run Konsole, and seeing it when you want (pressing the hotkey). Some advantages are written in https://bugs.kde.org/show_bug.cgi?id=320783#c6
Comment 15 Rodrigo Rosenfeld Rosas 2014-02-02 23:52:08 UTC
(In reply to comment #12)
> So if I understand this, you want 1 konsole window to have a shortcut to
> show/hide it.

Hi Kurt, yes. I don't actually care if there will be a tray icon or not but being able to switch its visibility and focus with a single key stroke is what I'm looking for. As a matter of fact, I've antecipated myself to bring this behavior to any existing window:

https://github.com/rosenfeld/ktrayshortcut

This is what I've been used for a while for achieving this goal and I'm happy with it so far, although I'd still appreciate some built-in method for konsole as well.
Comment 16 Rodrigo Rosenfeld Rosas 2014-02-02 23:53:45 UTC
(In reply to comment #13)
> > ...so we'd need a way to select the konsole window you wanted the shortcut to work with.
> 
> menu option in konsole? if another one is already designated 'background
> mode,' then ask it this should be overridden and the new one take it's place.

+1
Comment 17 Kurt Hindenburg 2014-02-04 13:40:45 UTC
Git commit cfbfb0fd8c11d16ccda0859b7c2edaac411caafb by Kurt Hindenburg.
Committed on 04/02/2014 at 13:35.
Pushed by hindenburg into branch 'master'.

Restore --background-mode

For now restore this option that was removed for 2.11.  This option
is somewhat a hack and abnormal feature.  However, it seems a number
of people use it and I can see how it would be useful.  So instead of
spending a lot of time right now trying to correct the issues, just
restore the previous code.
Ideally for KDE 5, this portion of the code can be better handled.

35bb9cf9e79465d252580615f50b4ce8d34e3d34
FIXED-IN: 2.13#

M  +6    -0    doc/manual/index.docbook
M  +56   -16   src/Application.cpp
M  +5    -0    src/Application.h
M  +3    -0    src/main.cpp

http://commits.kde.org/konsole/cfbfb0fd8c11d16ccda0859b7c2edaac411caafb
Comment 18 Rodrigo Rosenfeld Rosas 2014-02-04 13:50:21 UTC
Thank you very much for understanding, Kurt :)
Comment 19 Ganton 2014-02-05 17:31:35 UTC
I haven't tried the new code, but.. thank you very much, Kurt!

Using Konsole is much better than switching to e.g. Yakuake and losing features.
Comment 20 stmatthieu 2014-02-06 19:19:30 UTC
Thank you very much, Kurt !
Comment 21 Kurt Hindenburg 2014-02-07 14:33:22 UTC
Git commit cdfe23578445e52db43110cc1398f9367e83d860 by Kurt Hindenburg.
Committed on 04/02/2014 at 13:35.
Pushed by hindenburg into branch 'frameworks'.

Restore --background-mode

For now restore this option that was removed for 2.11.  This option
is somewhat a hack and abnormal feature.  However, it seems a number
of people use it and I can see how it would be useful.  So instead of
spending a lot of time right now trying to correct the issues, just
restore the previous code.
Ideally for KDE 5, this portion of the code can be better handled.

35bb9cf9e79465d252580615f50b4ce8d34e3d34
FIXED-IN: 2.13#
(cherry picked from commit cfbfb0fd8c11d16ccda0859b7c2edaac411caafb)

Conflicts:
	src/Application.cpp

M  +6    -0    doc/manual/index.docbook
M  +58   -16   src/Application.cpp
M  +5    -0    src/Application.h
M  +3    -0    src/main.cpp

http://commits.kde.org/konsole/cdfe23578445e52db43110cc1398f9367e83d860